--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -111,6 +111,10 @@
 
 
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" [disabled]="isLoading">
+      <span *ngIf="isLoading" class="spinner"></span>
+      <span *ngIf="!isLoading">Submit</span>
+      <span *ngIf="isLoading">Submitting...</span>
+    </button>
   </form>
 </div>
